--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@ button {
 <div id="bat"></div>
 
 <script>
+<script>
 const hitSound = new Audio("hit.mp3");
+
 const bat = document.getElementById("bat");
 const cake = document.getElementById("cake");
 const text = document.getElementById("text");
@@ -95,11 +97,14 @@ const start = document.getElementById("start");
 const end = document.getElementById("end");
 
 const words = ["OK.", "DONE.", "Naturally.", "Indeed."];
+
 let hit = 0;
-let totalDestroyed = localStorage.getItem("cakes") || 14382;
+let gameStarted = false;
+let totalDestroyed = parseInt(localStorage.getItem("cakes")) || 14382;
 
 function startGame() {
     start.style.display = "none";
+    gameStarted = true;
 }
 
 document.addEventListener("mousemove", e => {
@@ -108,6 +113,8 @@ document.addEventListener("mousemove", e => {
 });
 
 document.addEventListener("click", e => {
+    if (!gameStarted) return;
+
     const r = cake.getBoundingClientRect();
     if (
         e.clientX > r.left &&
@@ -123,9 +130,9 @@ function hitCake() {
 
     // hang
     hitSound.currentTime = 0;
-    hitSound.play();
+    hitSound.play().catch(()=>{});
 
-    // kis rázás
+    // kamera rázás
     document.body.style.transform = "translateX(5px)";
     setTimeout(() => document.body.style.transform = "translateX(-5px)", 50);
     setTimeout(() => document.body.style.transform = "translateX(0)", 100);
@@ -143,7 +150,6 @@ function hitCake() {
         hit++;
     } else {
 
-        // számláló növelése
         totalDestroyed++;
         localStorage.setItem("cakes", totalDestroyed);
 
@@ -153,8 +159,11 @@ function hitCake() {
             <div style="font-size:42px;margin-bottom:20px;">
                 You didn’t have to do that.
             </div>
-            <div style="font-size:22px;opacity:0.7;">
-                Cakes destroyed: ${totalDestroyed}
+            <div style="font-size:20px;opacity:0.6;">
+                Cakes destroyed globally
+            </div>
+            <div style="font-size:28px;margin-top:5px;">
+                ${totalDestroyed.toLocaleString()}
             </div>
         `;
 
@@ -165,10 +174,13 @@ function hitCake() {
         }, 1800);
     }
 }
+</script>
+
 
 </script>
 
 </body>
 </html>
+
 
 
