--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <title>Cakegeddon</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
 body {
     margin: 0;
@@ -13,7 +11,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-/* START & END */
+/* START és END képernyő */
 #start, #end {
     position: fixed;
     inset: 0;
@@ -24,11 +22,9 @@ body {
     justify-content: center;
     color: white;
     z-index: 10;
-    text-align: center;
 }
-
 button {
-    padding: 14px 32px;
+    padding: 12px 30px;
     font-size: 18px;
     cursor: pointer;
     margin-top: 20px;
@@ -44,7 +40,7 @@ button {
     pointer-events: none;
 }
 
-/* CAKE */
+/* TORTA KÉP */
 #cake {
     position: absolute;
     width: 220px;
@@ -54,7 +50,7 @@ button {
     transition: transform 0.1s;
 }
 
-/* TEXT */
+/* SZAVAK */
 #text {
     position: absolute;
     top: 20%;
@@ -69,87 +65,60 @@ button {
 </head>
 <body>
 
-<!-- START -->
-<div id="start" onclick="startGame()">
-    <img src="logo.png" style="width:300px;max-width:90%;">
-    <button>TAP TO START</button>
+<!-- START SCREEN -->
+<div id="start">
+    <img src="logo.png" style="width: 400px; max-width: 90%; margin-bottom: 20px;">
+    <button onclick="startGame()">START</button>
 </div>
 
-<!-- END -->
+<!-- END SCREEN -->
 <div id="end" style="display:none;">
-    <h1>You are weird.</h1>
-    <p id="finalCount"></p>
+    <h1>You are weird</h1>
     <button onclick="location.reload()">PLAY AGAIN</button>
 </div>
 
+<!-- SZÓ -->
 <div id="text"></div>
+
+<!-- TORTA -->
 <img id="cake" src="cake.png">
+
+<!-- BAT -->
 <div id="bat"></div>
 
 <script>
-const hitSound = new Audio("hit.mp3");
-
 const bat = document.getElementById("bat");
 const cake = document.getElementById("cake");
 const text = document.getElementById("text");
 const start = document.getElementById("start");
 const end = document.getElementById("end");
-const finalCount = document.getElementById("finalCount");
 
 const words = ["OK.", "DONE.", "Naturally.", "Indeed."];
-
 let hit = 0;
-let gameStarted = false;
-let totalDestroyed = parseInt(localStorage.getItem("cakes")) || 14382;
 
 function startGame() {
-    gameStarted = true;
     start.style.display = "none";
-
-    // mobil hang engedélyezés
-    hitSound.play().then(() => {
-        hitSound.pause();
-        hitSound.currentTime = 0;
-    }).catch(()=>{});
 }
 
-/* egér */
 document.addEventListener("mousemove", e => {
     bat.style.left = e.clientX + "px";
     bat.style.top = e.clientY + "px";
 });
 
-/* click */
 document.addEventListener("click", e => {
-    if (!gameStarted) return;
-    checkHit(e.clientX, e.clientY);
-});
-
-/* touch */
-document.addEventListener("touchstart", e => {
-    if (!gameStarted) return;
-    const t = e.touches[0];
-    checkHit(t.clientX, t.clientY);
-});
-
-function checkHit(x, y) {
     const r = cake.getBoundingClientRect();
-
     if (
-        x > r.left &&
-        x < r.right &&
-        y > r.top &&
-        y < r.bottom
+        e.clientX > r.left &&
+        e.clientX < r.right &&
+        e.clientY > r.top &&
+        e.clientY < r.bottom
     ) {
         hitCake();
     }
-}
+});
 
 function hitCake() {
-    hitSound.currentTime = 0;
-    hitSound.play();
-
-    cake.style.transform = "translate(-50%, -50%) scale(0.9)";
+    cake.style.transform = "translate(-50%, -50%) scale(0.95)";
     setTimeout(() => {
         cake.style.transform = "translate(-50%, -50%) scale(1)";
     }, 100);
@@ -160,30 +129,13 @@ function hitCake() {
         setTimeout(() => text.style.opacity = 0, 700);
         hit++;
     } else {
-        totalDestroyed++;
-        localStorage.setItem("cakes", totalDestroyed);
-
         cake.style.display = "none";
-
-        text.innerHTML = `
-            <div style="font-size:42px;">You didn’t have to do that.</div>
-            <div style="font-size:22px;opacity:0.7;margin-top:10px;">
-                Cakes destroyed: ${totalDestroyed}
-            </div>
-        `;
+        text.innerText = "You are weird";
         text.style.opacity = 1;
-
-        setTimeout(() => {
-            finalCount.innerText = "Total cakes destroyed: " + totalDestroyed;
-            end.style.display = "flex";
-        }, 1800);
+        setTimeout(() => end.style.display = "flex", 1200);
     }
 }
 </script>
 
 </body>
 </html>
-
-
-
-
